--- a/homePage.html
+++ b/homePage.html
@@ -195,8 +195,6 @@
             }
             .error { color: red; display: none; }
         #successMessage { display: none; color: green; font-weight: bold; }
-        /* Контейнер прогресса */
-/* Контейнер всей секции прогресса */
 .patients-section {
     display: flex;
     flex-direction: column;
@@ -206,20 +204,17 @@
     width: 100%;
     padding: 20px;
 }
-
-/* Контейнер прогресс-бара */
 #patients-progress-container {
-    width: 80%; /* Адаптивная ширина */
-    max-width: 600px; /* Ограничиваем максимальную ширину */
+    width: 80%;
+    max-width: 600px; 
     height: 20px;
     background: #e0e0e0;
     border-radius: 20px;
     overflow: hidden;
     position: relative;
-    margin: 10px auto; /* Центрируем */
+    margin: 10px auto; 
 }
 
-/* Сам прогресс-бар */
 #patients-progress-bar {
     height: 100%;
     width: 0;
@@ -230,7 +225,6 @@
     box-shadow: 0px 0px 10px rgba(32, 75, 114, 0.5);
 }
 
-/* Текст и процент */
 #progress-percent {
     position: absolute;
     top: -30px;
@@ -241,10 +235,9 @@
     color: #204B72;
 }
 
-/* Адаптивность для маленьких экранов */
 @media (max-width: 768px) {
     #patients-progress-container {
-        width: 90%; /* Делаем шире на мобильных */
+        width: 90%; 
     }
     #progress-percent {
         font-size: 14px;
